GPL/P6/tests/t063.err
Semantic error on line 3: Variable 'bubbles' previously declared.
