GPL/P6/tests/t063.gpl
// should be a "previously declared" error
circle bubbles(x = 42);
circle bubbles[3];
